# stock_scanner

./: .gitignore  .pre-commit-config.yaml  config.py  config_filters.py  download_report.txt  main.py  profiles.py  pyproject.toml  report.html  strategy_profiles.py  strategy_profiles2.py
.github/workflows/: ci.yml
analysis/: first_tier_filter.py  print_tickers_for_15m.py  second_tier_filter.py  third_tier_filter.py
app/metrics/: trend.py
app/providers/: base.py  cache.py  yahoo.py
app/scanners/: momentum_scanner.py
app/universe/: gpw.py
cache/: CRI.WA.parquet  CRI_WA_30m_5d.parquet
core/: io_utils.py  metrics.py
d1_parquet_gpw_test/: ALE_WA.parquet  ALG_WA.parquet  ALI_WA.parquet  ALL_WA.parquet  ALR_WA.parquet  AMB_WA.parquet  AMC_WA.parquet
data/txt/: first_tier_list.txt  first_tier_list_test.txt  last_update_d1.txt  last_update_min15.txt  last_update_min5.txt  third_tier_list.txt
diagnostics/: 1D_update_gpw.py  1d_down_single_ticket.py  calculate_1D.py  delete_10_rows.py  print_chart.py  print_tickers_for_15m.py  read_parquet.py
download/: 1D_update_gpw.py  d1_down_gpw.py  d1_gpw.py  downloader.py  min15_gpw.py  min5_gpw.py
download/15min/: 15_down.py  download_report.txt
download/1d/: d1_update_gpw.py
download/d1/: d1_down_gpw.py  download_report.txt  failed_tickers.txt  last_update.txt  tickers_xtb_WA_test.txt
download/min15/: 15min_tickers_WA.txt  min15_down.py  min15_update.py
download/min5/: min5_down.py
modular approach/: delete_10_rows.py  print_chart.py  read_parquet.py  tickers_xtb_WA.txt
modular approach/all_gpw/: 1Dt_down_gpw.py  print_tickers_for_15m.py  read_parquet.py
modular approach/parquet_not_updated/: 11B_WA.parquet  3RG_WA.parquet  4MS_WA.parquet  (+296 more)
report/: report_builder.py  report_updater.py
scanners/: momentum_scanner.py  tier1_scan.py  tier2_scan.py  tier3_scan.py  universal_scanner.py
stock_scanner/: README.md  bridge.py  config.py  config_filters.py  main.py  profiles.py  pyproject.toml  strategy_profiles.py
stock_scanner/core/: io_utils.py  metrics.py
stock_scanner/download/: downloader.py
stock_scanner/report/: report_builder.py  report_updater.py
stock_scanner/scanners/: momentum_scanner.py  three_tier_scanner.py  universal_scanner.py
stock_scanner/ui/: chart_widget.py  main.qml  main_window.py
stock_scanner/ui/windows/: base_window.py  chart_window.py  news_tracker_window.py  speculation_window.py  three_tier_window.py  wall_strategy_window.py
tests/: main_test.py
(+1611 files in other folders)
