[tool.poetry]
name = "stock_scanner"
version = "0.1.0"
description = "GPW short swing trading app"
authors = ["Mateusz <mateusz.malek.programista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
numpy = "*"
yfinance = "*"
tqdm = "*"
pyarrow = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
pytest = "*"
coverage = "*"
pre-commit = "*"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
disallow_untyped_defs = true