[tool.poetry]
name = "stock_scanner"
version = "0.1.0"
description = "GPW short swing trading app"
authors = ["Mateusz <mateusz.malek.programista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
numpy = "*"
yfinance = "*"
tqdm = "*"
pyarrow = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
mypy = "*"
pytest = "*"
coverage = "*"
pre-commit = "*"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # flake8 + importy (isort)

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
disallow_untyped_defs = true