[project]
name = "stock-scanner"
version = "0.1.0"
description = ""
authors = [
    {name = "matmal1992",email = "mateusz.malek.programista@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "stock_scanner", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
